# reaction_utils

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  env-dev.yml  genindex.html  index.html  modules.html  objects.inv  ord.html  pipeline.html  py-modindex.html  pyproject.toml  routes.html  rxnutils.chem.features.html  rxnutils.chem.html  rxnutils.chem.protection.html  rxnutils.chem.rinchi.html  rxnutils.data.html  rxnutils.data.ord.html  rxnutils.data.uspto.html  rxnutils.html  rxnutils.pipeline.actions.html  rxnutils.pipeline.html  rxnutils.routes.chemformer_feasibility.html  rxnutils.routes.deepset.html  rxnutils.routes.html  rxnutils.routes.retro_bleu.html  rxnutils.routes.ted.html  rxnutils.routes.utils.html  search.html  searchindex.js  tasks.py  templates.html  uspto.html
.github/workflows/: docs.yml  tests.yml
_sources/: index.rst.txt  modules.rst.txt  ord.rst.txt  pipeline.rst.txt  rxnutils.chem.features.rst.txt  rxnutils.chem.protection.rst.txt  rxnutils.chem.rinchi.rst.txt  rxnutils.chem.rst.txt  rxnutils.data.ord.rst.txt  rxnutils.data.rst.txt  rxnutils.data.uspto.rst.txt  rxnutils.pipeline.actions.rst.txt  rxnutils.pipeline.rst.txt  rxnutils.routes.chemformer_feasibility.rst.txt  rxnutils.routes.deepset.rst.txt  rxnutils.routes.retro_bleu.rst.txt  rxnutils.routes.rst.txt  rxnutils.routes.ted.rst.txt  rxnutils.routes.utils.rst.txt  rxnutils.rst.txt  templates.rst.txt  uspto.rst.txt
docs/: conf.py  index.rst  ord.rst  routes.rst
examples/nnaa/: protection_groups.csv  protection_reactions.csv  reactive_functions_ontology.txt  tutorial.ipynb
examples/route-comparison/: Roth 1991 Chiral aux via Claisen.rdf  Roth 1991 rac.rdf  US5298627 route.rdf  route-comparison.ipynb
examples/route-efficiency/: paroutes-analysis.ipynb
examples/route-scoring/: .gitignore  complexity.py  example-routes.json  route-efficiency.ipynb  route-scoring.ipynb
rxnutils/chem/: augmentation.py  cgr.py  reaction.py  smartslib.py  template.py  utils.py
rxnutils/data/: base_pipeline.py  batch_utils.py  mapping.py  mapping_pipeline.py
rxnutils/pipeline/: base.py  runner.py
rxnutils/routes/: base.py  comparison.py  image.py  readers.py  scoring.py
tests/: conftest.py  test_amino_acid_protection.py  test_batch_utils.py  test_cgr.py  test_chem_utils.py  test_df_mod_actions.py  test_featurization.py  test_pipeline.py  test_product_tagging.py  test_reaction.py  test_reaction_mods_actions.py  test_reaction_props_actions.py  test_rinchi.py  test_routes_base.py  test_routes_comparison.py  test_routes_readers.py  test_routes_scoring.py  test_scscore.py  test_smartslib.py  test_ted.py  test_template.py  test_template_actions.py  test_uspto.py  test_validation.py
tests/data/: atorvastatin_routes.json  branched_route.json  example_pipeline.yml  example_reactions.csv  example_reactions_ids.csv  example_ring_reactions.csv  example_route.rdf  example_routes.json  example_stereo_reactions.csv  example_templates.csv  longer_routes.json  mapped_tests_reactions.csv  precomputed_fps.json  rc_test_v3_0.tsv  rc_test_v3_1.tsv  sample_templates.json  scscore_dummy_model.onnx  simple_protection_groups.csv  (+5 more)
(+37 files in other folders)
