[tool.poetry]
name = "reaction_utils"
version = "1.9.2"
description = "Utilities for working with reactions, reaction templates and template extraction"
authors = ["Genheden, Samuel <samuel.genheden@astrazeneca.com>", "Kannas, Christos <christos.kannas@astrazeneca.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/MolecularAI/reaction_utils/"
repository = "https://github.com/MolecularAI/reaction_utils/"
documentation = "https://molecularai.github.io/reaction_utils/"
packages = [
    { include = "rxnutils" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
urllib3 = "^1.2.26"
pandas = ">=1.0.0,<3.0.0"
xxhash = "^3.0.0"
rdchiral = "^1.1.0"
PyYAML = "^6.0.1"
swifter = "^1.0.9"
metaflow = "^2.6.3"
py7zr = "^1.0.0"
Deprecated = "^1.2.13"
wrapt-timeout-decorator = "^1.3.12"
numpy = "^1.0.0"
rdkit = "^2023.9.1"
cgrtools = "^4.1.35"
scipy = "^1.11.4"
pydantic = "^2.8.2"
apted = "^1.0.3"
dask = ">=2024.4.1"
onnxruntime = {version = "<1.17.0", optional=true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-datadir = "^1.5.0"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"
requests-mock = "^1.12.1"
black = "^24.10.0"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
ipython = "^7.21.0"
pylint = "^3.3.1"
invoke = "^2.2.0"
sphinx = "<8.1.0"

[tool.poetry.extras]
models = ["onnxruntime"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
max-args = 6
max-attributes = 15
max-public-methods = 25
min-public-methods = 0
disable = "W1203, W0707, W1514, W0602, typecheck"

[tool.coverage.run]
relative_files = true
